[tool.poetry]
name = "mizogg-bitcoin-tools"
version = "0.1.0"
description = ""
authors = ["Mizogg <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bit = "^0.8.0"
requests = "^2.27.1"
mnemonic = "^0.20"
bip32utils = "^0.3.post4"
base58 = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
